--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "namaste react by hitesh",
-  
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -24,10 +23,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0"
   },
-  "browserlist" : [
+  "browserlist": [
     "last 10 versions"
   ]
-  
 }
